# python_source_internal

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.rst  CHANGELOG.rst  CONTRIBUTING.rst  SECURITY.rst  conf.py  glossary.rst  index.rst  requirements.txt
docs/ceval/: bytecodes.rst  calls.rst  ceval-loop.rst  index.rst  jit.rst  specialize.rst  tier2.rst  with-statement.rst
docs/compiler/: ast.rst  compiler.rst  deferred-annotations.rst  import.rst  index.rst  parser.rst  pattern-matching.rst  symtable.rst  (+1 more)
examples/: annotation_demo.py  arena_demo.py  ast_demo.py  async_demo.py  bytecodes_demo.py  calls_demo.py  ceval_loop_demo.py  classmethod_demo.py  codecs_demo.py  compiler_demo.py  debug_demo.py  descriptor_demo.py  dict_demo.py  exception_demo.py  function_code_demo.py  gc_cycles_demo.py  gc_demo.py  gil_demo.py  hello_pyobject.py  import_demo.py  iterator_generator_demo.py  jit_demo.py  list_demo.py  longobject_demo.py  marshal_demo.py  match_demo.py  module_demo.py  obmalloc_demo.py  parser_demo.py  property_demo.py  pyobject_layout.py  refcount_demo.py  slots_demo.py  specialize_demo.py  super_demo.py  symtable_demo.py  sysmodules_demo.py  tier2_demo.py  tokenizer_demo.py  traceback_demo.py  (+6 more)
tests/: conftest.py
tools/: add_references.py  fix_cjk_markup.py  fix_underlines.py
(+58 files in other folders)
